4-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "default"
spec:
  selector:
    matchLabels:
      run: test
  mtls:
    mode: STRICT
  portLevelMtls:
    80:
      mode: DISABLE
