11-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: end-user-gateway
  namespace: end-user
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "end-user.domain.com"
