13-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cnn-istio-egress
  namespace: cnn
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "edition.cnn.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "edition.cnn.com"
